--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					12.23: 更新关卡过关提示, F配件数据<br/>
 					<br/>
 				</div>
-					12.24: 移动适配版v1发布~ 已知缺陷: 500~700宽度的屏幕的衣服分类tab页样式错乱; 切换分类后浮动表头样式错乱(趁晚上没人用偷偷更新一发<br/>
+					12.24: 移动适配版v1发布~ 已知缺陷: 500~700宽度的屏幕的衣服分类tab页样式错乱; 切换分类后浮动表头样式错乱;  显示更多衣服按钮是假的, 请继续使用顶配模式按钮;(趁晚上没人用偷偷更新一发<br/>
 				<a href="#" id="show_history">历史更新</a><br/>
 				<br/>
 				服装数据来自jillhx@QQ群 20151223, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">贴吧</a>汇报<br/>
