--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					12.24: 修复浮动表头<br/>
 					<br/>
 				</div>
-					12.24: 移动适配版v2发布: 调整650-850宽度的界面样式错乱; 调整顶配模式位置; 调整移动版部分细节; 调整表格配色<br/>
+					12.24: 移动适配版v2发布: 调整650-850宽度的界面样式错乱; 调整顶配模式位置; 调整移动版部分细节; 调整表格配色; 未选择关卡时不显示推荐部件;<br/>
 					近期更新的会比较频繁, 可能会对正常使用造成一定影响, 功能不稳定期间可以先使用IP君的配装器<br/>
 				<a href="#" id="show_history">历史更新</a><br/>
 				<br/>
