--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					12.24: 修复浮动表头<br/>
 					<br/>
 				</div>
-					12.24: 移动适配版v2发布: 调整650-850宽度的界面样式错乱; 调整顶配模式位置; 调整移动版部分细节; 调整表格配色; 未选择关卡时不显示推荐部件;<br/>
+					12.24: 移动适配版v2发布: 调整650-850宽度的界面样式错乱; 调整顶配模式位置到衣柜下方; 调整移动版部分细节; 调整表格配色; 未选择关卡时不显示推荐部件;<br/>
 					近期更新的会比较频繁, 可能会对正常使用造成一定影响, 功能不稳定期间可以先使用IP君的配装器<br/>
 				<a href="#" id="show_history">历史更新</a><br/>
 				<br/>
@@ -208,6 +208,7 @@
 						<div class="fliter_option clear">
 							<div class="checkbox"><label><input type="checkbox" class="fliter" value="own" checked /> 拥有<span id='inventoryCount'/></label></div>
 							<div class="checkbox"><label><input type="checkbox" class="fliter" value="missing" checked /> 没有</label></div>
+							<span> (我在衣柜下边) </span>
 							<span><a href="#" id="advanced_options">高级选项</a></span>
 							<span id="advanced_options_span">
 								<div class="checkbox"><label><input type="checkbox" class="fliter" value="sortbyscore" /> 饰品分数/id排序</label></div>
