--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					<br/>
 				</div>
 					12.24: 移动适配版v2发布: 调整650-850宽度的界面样式错乱; 调整顶配模式位置到衣柜下方; 调整移动版部分细节; 调整表格配色; 未选择关卡时不显示推荐部件;<br/>
-					近期更新的会比较频繁, 可能会对正常使用造成一定影响, 功能不稳定期间可以先使用IP君的配装器<br/>
+					26号刚说完会更新频繁就被打脸, 因三次元事宜, 1月4号前可能不会有太大更新了<br/>
 				<a href="#" id="show_history">历史更新</a><br/>
 				<br/>
 				服装数据来自jillhx@QQ群 20151223, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">贴吧</a>汇报<br/>
