--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					<br/>
 				</div>
 					打脸第二次, <red>重大更新</red><br/>
-					<red>伟大的IP君更新了新的饰品分值计算规则, 理论部分见<a href="http://tieba.baidu.com/p/4236753793?see_lz=1">贴吧此贴</a>, 简单说一下结论就是, 穿20件饰品分最高, 穿20件饰品分最高, 穿20件饰品分最高, 重要的事情说三遍,所以以前的攻略基本都失效了, 请大家及时更新顶配</red><br/>
+					<red>伟大的IP君更新了新的饰品分值计算规则, 理论部分见<a href="http://tieba.baidu.com/p/4236753793?see_lz=1">贴吧此贴</a>, 简单说一下结论就是, 没tag时穿20件饰品分最高, 没tag时穿20件饰品分最高, 没tag时穿20件饰品分最高, 重要的事情说三遍, 所以以前的攻略基本都失效了, 请大家及时更新顶配</red><br/>
 					12.27: 修改饰品分数计算规则<br/>
 				<a href="#" id="show_history">历史更新</a><br/>
 				<br/>
