--- a/index.html
+++ b/index.html
@@ -113,9 +113,13 @@
 					12.24: 移动适配版v2发布: 调整650-850宽度的界面样式错乱; 调整顶配模式位置到衣柜下方; 调整移动版部分细节; 调整表格配色; 未选择关卡时不显示推荐部件;<br/>
 					<br/>
 				</div>
-					打脸第二次, <red>重大更新</red><br/>
-					<red>伟大的IP君更新了新的饰品分值计算规则, 理论部分见<a href="http://tieba.baidu.com/p/4236753793?see_lz=1">贴吧此贴</a>, 简单说一下结论就是, 没tag时穿20件饰品分最高, 没tag时穿20件饰品分最高, 没tag时穿20件饰品分最高, 重要的事情说三遍, 所以以前的攻略基本都失效了, 请大家及时更新顶配</red><br/>
+					打脸第二次, <red>重大更新</red>(换个正常点的公告<br/>
+					<red>伟大的IP君更新了新的饰品分值计算规则, 理论部分见<a href="http://tieba.baidu.com/p/4236753793?see_lz=1">贴吧此贴</a></red><br/>
+					简单说一下结论就是, 如果你翅膀, 纹身, 发卡, 尾巴等稀有部位收集度足够的话, 几乎所有没tag的关卡和大部分单tag的关卡, 在穿<red>20+件</red>饰品时得分最高, 哪怕穿几百分的饰品, 因为饰品在超过16件时不再扣分<br/>
+					<red>所以以前的攻略全部失效, 请大家及时更新顶配</red><br/>
+					<red>非常感谢IP君的研究和付出, 非常建议大家去看一下IP君的原帖分析过程</red><br/>
 					12.27: 修改饰品分数计算规则<br/>
+					近期因三次元繁忙, 不再做太多更新<br/>
 				<a href="#" id="show_history">历史更新</a><br/>
 				<br/>
 				服装数据来自jillhx@QQ群 20151223, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">贴吧</a>汇报<br/>
