--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<script type='text/javascript' charset="UTF-8" src='jquery.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='jquery.freezeheader.js'></script>
 		<script type='text/javascript' charset="UTF-8" src="bootstrap/bootstrap.min.js"></script>
+		<script type='text/javascript' charset="UTF-8" src="tool.js"></script>
 		<script type='text/javascript' charset="UTF-8" src='wardrobe.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='scoring.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='levels.js'></script>
@@ -111,15 +112,10 @@
 					12.24: 移动适配版v1发布~ 已知缺陷: 650~850宽度的屏幕的衣服分类tab页样式错乱; 切换分类后浮动表头样式错乱;  显示更多衣服按钮是假的, 请继续使用顶配模式按钮;(趁晚上没人用偷偷更新一发<br/>
 					12.24: 修复浮动表头<br/>
 					12.24: 移动适配版v2发布: 调整650-850宽度的界面样式错乱; 调整顶配模式位置到衣柜下方; 调整移动版部分细节; 调整表格配色; 未选择关卡时不显示推荐部件;<br/>
+					12.27: 修改饰品分数计算规则, 一键攻略尚未更新<br/>
 					<br/>
 				</div>
-					<red>重大更新</red><br/>
-					<red>伟大的IP君更新了新的饰品分值计算规则, 理论部分见<a href="http://tieba.baidu.com/p/4236753793?see_lz=1">贴吧此贴</a></red><br/>
-					简单说一下结论就是, 如果你翅膀, 纹身, 发卡, 尾巴等稀有部位收集度足够的话, 几乎所有没tag的关卡和大部分单tag的关卡, 在穿<red>20+件</red>饰品时得分最高, 哪怕穿几百分的饰品, 因为饰品在超过16件时不再扣分<br/>
-					<red>所以以前的攻略全部失效, 请大家及时更新顶配</red><br/>
-					<red>非常感谢IP君的研究和付出, 非常建议大家去看一下IP君的原帖分析过程</red><br/>
-					12.27: 修改饰品分数计算规则, 一键攻略尚未更新<br/>
-					近期因三次元繁忙, 不再做太多更新<br/>
+					12.30: 配装器主功能没有修改, 做了一个针对梦幻大使的小功能, <a href="biguse.html">连接点此</a><br/>
 				<a href="#" id="show_history">历史更新</a><br/>
 				<br/>
 				服装数据来自jillhx@QQ群 20151223, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">贴吧</a>汇报<br/>
@@ -131,6 +127,7 @@
 			<div class="fliter">
 				距离搭配赛结束还有<span id="showTime">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>&nbsp;&nbsp;|&nbsp;&nbsp;
 				<a href="strategy.html">常用攻略</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+				<a href="biguse.html">梦幻大使对比工具</a>
 				<button style="display:none" class="btn btn-sm btn-default" id="sharewardrobe">分享衣柜</button>&nbsp;&nbsp;|&nbsp;&nbsp;
 				<button style="display:none" class="btn btn-sm btn-default" id="aaa" onclick="getWardrobe()">同步分享的衣柜</button>
 				<br/>
