--- a/biguse.html
+++ b/biguse.html
@@ -45,7 +45,7 @@
 				<div id="update_history">
 					<br/>
 				</div>
-					12.30: 为梦幻大使活动做得小工具, 比较简单, 有建议可以在下边留言<br/>
+					12.30: 为梦幻大使活动做得小工具, 比较简单, 有建议可以在下边留言(图片太大了暂时传不上来...<br/>
 				<a href="#" id="show_history">历史更新</a><br/>
 				<br/>
 				基础数据来自奇迹暖暖在线配装器 by黑的升华<br/>
