--- a/biguse.html
+++ b/biguse.html
@@ -46,6 +46,7 @@
 					<br/>
 				</div>
 					12.30: 为梦幻大使活动做得小工具, 比较简单, 有建议可以在下边留言(图片太大了暂时传不上来...<br/>
+					12.30: 把图片喂给哈士奇咬了10分钟, 传上来了一份很模糊的临时版本, 1号左右有时间的时候重新压一遍<br/>
 				<a href="#" id="show_history">历史更新</a><br/>
 				<br/>
 				基础数据来自奇迹暖暖在线配装器 by黑的升华<br/>
@@ -55,8 +56,8 @@
 			<div>
 				<select id="theme" onChange="changeTheme()"></select>
 			<div style="display:none" id="imgModel" onerror="noimg()">
-			<div id="imgInfo" style="font-size: 22px"></div>
 			</div>
+			<div id="imgInfo" style="font-size: 18px"></div>
 				
 			</div>
 			<div class="fliter hidden">
