--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 				</div>
 					12.30: 配装器主功能没有修改, 做了一个针对梦幻大使的小功能, <a href="biguse.html">连接点此</a><br/>
 					1.2: 衣柜更新, 修复青花蝶<br/>
+					1.3: 修复一系列因为上次更新偷懒导致的问题<br/>
 				<a href="#" id="show_history">历史更新</a><br/><br/>
 					近期配装器不做太大更新。<del>更新耽误我玩单机RPG</del><br/>
 				<br/>
