--- a/index.html
+++ b/index.html
@@ -118,14 +118,15 @@
 					12.30: 配装器主功能没有修改, 做了一个针对梦幻大使的小功能, <a href="biguse.html">连接点此</a><br/>
 					1.2: 衣柜更新, 修复青花蝶<br/>
 					1.3: 修复一系列因为上次更新偷懒导致的问题<br/>
+					1.6: 过关提示与F品更新<br/>
 				<a href="#" id="show_history">历史更新</a><br/><br/>
-					近期配装器不做太大更新。<del>更新耽误我玩单机RPG</del><br/>
+					近期配装器不做太大更新, 只做现有数据的更新, 以及自己需要用到的功能。<del>更新耽误我玩单机RPG</del><br/>
 				<br/>
 				服装数据来自jillhx@QQ群 20151223, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">贴吧</a>汇报<br/>
 				设计图数据来自amy_翡翠@QQ群 V1.6.3<br/>
 				关卡, 联盟技能数据来自morei猫猫&兔子@QQ群 20151203<br/>
 				关卡过关提示, F配件数据来自morei猫猫&兔子@QQ群 20151223, F品信息补充请至<a href="http://tieba.baidu.com/p/4223816101">贴吧</a>或<a href="http://weibo.com/5674185517/D9pJb9iSF">微博</a>汇报<br/>
-				更新预告: 手机适配版(v2), 筛选功能(todo), 衣柜分享(doing), F品信息整合(todo), 快速添加衣柜(plan)<br/>
+				更新预告: newUIv3(delay), 筛选功能(doing), 衣柜分享(delay), F品信息整合(reject), 快速添加衣柜(merger:筛选)<br/>
 			</div><!-- announcement -->	
 			<div class="fliter">
 				距离搭配赛结束还有<span id="showTime">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>&nbsp;&nbsp;|&nbsp;&nbsp;
