--- a/index.html
+++ b/index.html
@@ -113,12 +113,13 @@
 					12.24: 修复浮动表头<br/>
 					12.24: 移动适配版v2发布: 调整650-850宽度的界面样式错乱; 调整顶配模式位置到衣柜下方; 调整移动版部分细节; 调整表格配色; 未选择关卡时不显示推荐部件;<br/>
 					12.27: 修改饰品分数计算规则, 一键攻略尚未更新<br/>
-					<br/>
-				</div>
 					12.30: 配装器主功能没有修改, 做了一个针对梦幻大使的小功能, <a href="biguse.html">连接点此</a><br/>
 					1.2: 衣柜更新, 修复青花蝶<br/>
 					1.3: 修复一系列因为上次更新偷懒导致的问题<br/>
 					1.6: 过关提示与F品更新<br/>
+					<br/>
+				</div>
+					1.8: 11章缓慢更新中
 				<a href="#" id="show_history">历史更新</a><br/><br/>
 					近期配装器不做太大更新, 只做现有数据的更新, 以及自己需要用到的功能。<del>更新耽误我玩单机RPG</del><br/>
 				<br/>
