--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 					1.6: 过关提示与F品更新<br/>
 					<br/>
 				</div>
-					1.8: 11章缓慢更新中
+					1.8: 11章缓慢更新中, <red>充值套连衣裙疑似全能, 11-3,11-4已测</red>, 趁没改之前赶紧用吧
 				<a href="#" id="show_history">历史更新</a><br/><br/>
 					近期配装器不做太大更新, 只做现有数据的更新, 以及自己需要用到的功能。<del>更新耽误我玩单机RPG</del><br/>
 				<br/>
