--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 					1.6: 过关提示与F品更新<br/>
 					<br/>
 				</div>
-					1.8: 11章属性更新完毕, 后面关卡过关提示后续更新, <red>充值套连衣裙已确定全能, 通过拼饰品和技能(微笑>睡>嘲讽>飞吻>微笑)可以全关S</red>, 趁没改之前赶紧用吧<br/>
+					1.8: 11章属性更新完毕, 后面关卡过关提示后续更新, <red>充值套连衣裙已确定全能(不要穿外套), 通过拼饰品和技能(微笑>睡>嘲讽>飞吻>微笑)可以全关S</red>, 趁没改之前赶紧用吧<br/>
 				<a href="#" id="show_history">历史更新</a><br/><br/>
 					近期配装器不做太大更新, 只做现有数据的更新, 以及自己需要用到的功能。<del>更新耽误我玩单机RPG</del><br/>
 				<br/>
