--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 					<br/>
 				</div>
 					1.8: 11章属性,tag更新完毕, 关卡过关提示持续更新中, <red>11-3, 11-5, 11-8 可以通过充值套连衣裙(不穿外套)拼技能(微笑>睡>嘲讽>飞吻>微笑), 不做新套装达到S</red>, 其他容易F(分数为正常的1/10)的关卡也可以, 趁没改之前赶紧用吧<br/>
+					1.8: 更新11章粗略权重from兔子<br/>
 				<a href="#" id="show_history">历史更新</a><br/><br/>
 					近期配装器不做太大更新, 只做现有数据的更新, 以及自己需要用到的功能。<del>更新耽误我玩单机RPG</del><br/>
 				<br/>
