--- a/index.html
+++ b/index.html
@@ -121,10 +121,11 @@
 				</div>
 					1.8: 11章属性,tag更新完毕, 关卡过关提示持续更新中, <red>11-3, 11-5, 11-8 可以通过充值套连衣裙(不穿外套)拼技能(微笑>睡>嘲讽>飞吻>微笑), 不做新套装达到S</red>, 其他容易F(分数为正常的1/10)的关卡也可以, 趁没改之前赶紧用吧<br/>
 					1.8: 更新11章粗略权重from兔子<br/>
+					1.8: 更新衣柜至jillhx@QQ群20160108<br/>
 				<a href="#" id="show_history">历史更新</a><br/><br/>
 					近期配装器不做太大更新, 只做现有数据的更新, 以及自己需要用到的功能。<del>更新耽误我玩单机RPG</del><br/>
 				<br/>
-				服装数据来自jillhx@QQ群 20151223, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">贴吧</a>汇报<br/>
+				服装数据来自jillhx@QQ群 20160108, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">贴吧</a>汇报<br/>
 				设计图数据来自amy_翡翠@QQ群 V1.6.3<br/>
 				关卡, 联盟技能数据来自morei猫猫&兔子@QQ群 20151203<br/>
 				关卡过关提示, F配件数据来自morei猫猫&兔子@QQ群 20151223, F品信息补充请至<a href="http://tieba.baidu.com/p/4223816101">贴吧</a>或<a href="http://weibo.com/5674185517/D9pJb9iSF">微博</a>汇报<br/>
