--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					<br/>
 				</div>
 					1.8: 11章属性,tag更新完毕, 关卡过关提示持续更新中, <red>11-3, 11-5, 11-8 可以通过充值套连衣裙(不穿外套)拼技能(睡>微笑>挑剔>飞吻>微笑), 不做新套装达到S</red>, 其他容易F(分数为正常的1/10)的关卡也可以, 趁没改之前赶紧用吧<br/>
-					1.8: 更新11章粗略权重from兔子<br/>
+					1.8: 更新11章过关提示from兔子<br/>
 					1.8: 更新衣柜至jillhx@QQ群20160108<br/>
 					1.8: 简单调整了一键攻略宽度<br/>
 				<a href="#" id="show_history">历史更新</a><br/><br/>
