--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
 					1.8: 简单调整了一键攻略宽度<br/>
 					<br/>
 				</div>
-					1.16: 衣柜数据更新, 设计图数据更新, 调整11章为普通关卡 by 翡翠
+					1.16: 衣柜数据更新, 设计图数据更新, 调整11章为普通关卡 by 翡翠<br/>
+					1.16: 一键攻略更新<br/>
 				<a href="#" id="show_history">历史更新</a><br/><br/>
 					近期会逐渐把配装器日常更新转交给翡翠和兔子, 自己抽时间做一些功能性的更新 by依旧沉迷在其他游戏的黑的升华<br/>
 				<br/>
