--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					1.16: 一键攻略更新<br/>
 					1.17: 忘了写公告, 关卡, 设计图, 衣柜更新完毕<br/>
 					1.17: 添加筛选功能, 只在页面内筛选, 需要先点击显示全部衣柜后再筛选<br/>
-					1.17: 修复导航条, 顶部添加显示全部衣柜按钮<br/>
+					1.17: 修复浮动条, 顶部添加显示全部衣柜按钮<br/>
 				<a href="#" id="show_history">历史更新</a><br/><br/>
 					近期会逐渐把配装器日常更新转交给翡翠和兔子, 自己抽时间做一些功能性的更新 by依旧沉迷在其他游戏的黑的升华<br/>
 				<br/>
