update acc score

--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
 					1.17: 修复浮动条, 顶部添加显示全部衣柜按钮<br/>
 					1.17: 更新过关提示, F品 by 兔子<br/>
 					1.18: 测试一下完全解放我的方式, 无内容更新<br/>
+					1.19: 半夜忙完发现饰品分数规则改了, ip君那边估计commit代码后又忘了push, 所以算出的tag分数都是NaN, 根据原理自己理解写了一个规则, 有问题的话周末再改吧, 基本全关带20个饰品没问题, 也没见过哪几关权重相差10倍的<br/>
 				<a href="#" id="show_history">历史更新</a><br/><br/>
-					近期会逐渐把配装器日常更新转交给翡翠和兔子, 自己抽时间做一些功能性的更新 by依旧沉迷在其他游戏的黑的升华<br/>
+					近期会逐渐把配装器日常更新转交给翡翠和兔子, 自己抽时间做一些功能性的更新 by深度AFK的黑的升华<br/>
 				<br/>
 				服装数据来自jillhx@QQ群 20160108, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">贴吧</a>汇报<br/>
 				设计图数据来自amy_翡翠@QQ群 V1.6.3<br/>
