--- a/index.html
+++ b/index.html
@@ -121,8 +121,6 @@
 					1.8: 更新11章过关提示from兔子<br/>
 					1.8: 更新衣柜至jillhx@QQ群20160108<br/>
 					1.8: 简单调整了一键攻略宽度<br/>
-					<br/>
-				</div>
 					1.16: 衣柜数据更新, 设计图数据更新, 调整11章为普通关卡 by 翡翠<br/>
 					1.16: 一键攻略更新<br/>
 					1.17: 忘了写公告, 关卡, 设计图, 衣柜更新完毕<br/>
@@ -130,7 +128,10 @@
 					1.17: 修复浮动条, 顶部添加显示全部衣柜按钮<br/>
 					1.17: 更新过关提示, F品 by 兔子<br/>
 					1.18: 测试一下完全解放我的方式, 无内容更新<br/>
+					<br/>
+				</div>
 					1.19: 半夜忙完发现饰品分数规则改了, ip君那边估计commit代码后又忘了push, 所以算出的tag分数都是NaN, 根据原理自己理解写了一个规则, 有问题的话周末再改吧, 基本全关带20个饰品没问题, 也没见过哪几关权重相差10倍的<br/>
+					1.19: 修复移动版属性错误<br/>
 				<a href="#" id="show_history">历史更新</a><br/><br/>
 					近期会逐渐把配装器日常更新转交给翡翠和兔子, 自己抽时间做一些功能性的更新 by深度AFK的黑的升华<br/>
 				<br/>
