move static data to other project

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 		<script type='text/javascript' charset="UTF-8" src='jquery.freezeheader.js'></script>
 		<script type='text/javascript' charset="UTF-8" src="bootstrap/bootstrap.min.js"></script>
 		<script type='text/javascript' charset="UTF-8" src="tool.js"></script>
-		<script type='text/javascript' charset="UTF-8" src='wardrobe.js'></script>
+		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/wardrobe.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='scoring.js'></script>
-		<script type='text/javascript' charset="UTF-8" src='levels.js'></script>
+		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/levels.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='model.js'></script>
-		<script type='text/javascript' charset="UTF-8" src='pattern.js'></script>
+		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/pattern.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='onekeystrategy.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='ui.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='nikki.js'></script>
@@ -128,10 +128,11 @@
 					1.17: 修复浮动条, 顶部添加显示全部衣柜按钮<br/>
 					1.17: 更新过关提示, F品 by 兔子<br/>
 					1.18: 测试一下完全解放我的方式, 无内容更新<br/>
-					<br/>
-				</div>
 					1.19: 半夜忙完发现饰品分数规则改了, ip君那边估计commit代码后又忘了push, 所以算出的tag分数都是NaN, 根据原理自己理解写了一个规则, 有问题的话周末再改吧, 基本全关带20个饰品没问题, 也没见过哪几关权重相差10倍的<br/>
 					1.19: 修复移动版属性错误<br/>
+					<br/>
+				</div>
+					1.24: 把冰雪女王活动去掉以证明一下自己还活着<br/>
 				<a href="#" id="show_history">历史更新</a><br/><br/>
 					近期会逐渐把配装器日常更新转交给翡翠和兔子, 自己抽时间做一些功能性的更新 by深度AFK的黑的升华<br/>
 				<br/>
