--- a/biguse.html
+++ b/biguse.html
@@ -14,17 +14,18 @@
 		<link rel="stylesheet" type="text/css" href="ui.css">
 		<link rel="stylesheet" type="text/css" href="mobileui.css" media="only screen and (max-width: 650px)">
 		<link rel="stylesheet" href="biguse.css">
+		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/notice.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='jquery.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='jquery.freezeheader.js'></script>
 		<script type='text/javascript' charset="UTF-8" src="bootstrap/bootstrap.min.js"></script>
 		<script type='text/javascript' charset="UTF-8" src="jquery.autocomplete.min.js"></script>		
 		<script type='text/javascript' charset="UTF-8" src="tool.js"></script>
-		<script type='text/javascript' charset="UTF-8" src='wardrobe.js'></script>
+		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/wardrobe.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='scoring.js'></script>
-		<script type='text/javascript' charset="UTF-8" src='levels.js'></script>
+		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/levels.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='model.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='biguse_model.js'></script>
-		<script type='text/javascript' charset="UTF-8" src='pattern.js'></script>
+		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/pattern.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='onekeystrategy.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='ui.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='biguse_ui.js'></script>
