--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" type="text/css" href="ui.css">
 		<link rel="stylesheet" type="text/css" href="mobileui.css" media="only screen and (max-width: 650px)">
+		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/notice.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='jquery.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='jquery.freezeheader.js'></script>
 		<script type='text/javascript' charset="UTF-8" src="bootstrap/bootstrap.min.js"></script>
@@ -30,11 +31,10 @@
   </head>
   <body>
 		<div class='title'>
-			奇迹暖暖在线配装器 by:黑的升华<br/>
-			对配装器有什么建议可以到<a href="http://weibo.com/u/3597140883">@黑的升华</a>或者<a href="http://tieba.baidu.com/p/4131330280">贴吧</a>汇报~<br/>
-			<font style="color:red">本配装器是基于意念挖坟的ip君@ivangift's github 20151201修改, 需要准确数据的可以使用</font><a href="http://ivangift.github.io/nikkiup2u3/">IP君原版</a><br/>
-			<font style="color:red">本配装器是基于意念挖坟的ip君@ivangift's github 20151201修改, 需要准确数据的可以使用</font><a href="http://ivangift.github.io/nikkiup2u3/">IP君原版</a><br/>
-			<font style="color:red">本配装器是基于意念挖坟的ip君@ivangift's github 20151201修改, 需要准确数据的可以使用</font><a href="http://ivangift.github.io/nikkiup2u3/">IP君原版</a>，重要的事情说三遍<br/>
+			奇迹暖暖在线配装器 by <a href="http://weibo.com/u/3597140883">@黑的升华</a>   modified from
+			<a href="http://ivangift.github.io/nikkiup2u3/"><font style="color:red">意念挖坟的ip君@ivangift's github 20151201</font></a><br/>
+			服装、设计图数据 provided by amy_翡翠<br/>
+			全关卡数据、提示 provided by morei猫猫&兔子  <a href="http://tieba.baidu.com/p/4223816101">贴吧反馈</a> | <a href="http://weibo.com/5674185517/D9pJb9iSF">微博反馈</a><br/>
 			<div id="share-link"></div>
 		</div>
 		<div id="StrategyInfo"></div>
@@ -130,21 +130,23 @@
 					1.18: 测试一下完全解放我的方式, 无内容更新<br/>
 					1.19: 半夜忙完发现饰品分数规则改了, ip君那边估计commit代码后又忘了push, 所以算出的tag分数都是NaN, 根据原理自己理解写了一个规则, 有问题的话周末再改吧, 基本全关带20个饰品没问题, 也没见过哪几关权重相差10倍的<br/>
 					1.19: 修复移动版属性错误<br/>
+					1.24: 把冰雪女王活动去掉以证明一下自己还活着<br/>
 					<br/>
 				</div>
-					1.24: 把冰雪女王活动去掉以证明一下自己还活着<br/>
-				<a href="#" id="show_history">历史更新</a><br/><br/>
-					近期会逐渐把配装器日常更新转交给翡翠和兔子, 自己抽时间做一些功能性的更新 by深度AFK的黑的升华<br/>
-				<br/>
-				服装数据来自jillhx@QQ群 20160108, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">贴吧</a>汇报<br/>
-				设计图数据来自amy_翡翠@QQ群 V1.6.3<br/>
-				关卡, 联盟技能数据来自morei猫猫&兔子@QQ群 20151203<br/>
-				关卡过关提示, F配件数据来自morei猫猫&兔子@QQ群 20160106, F品信息补充请至<a href="http://tieba.baidu.com/p/4223816101">贴吧</a>或<a href="http://weibo.com/5674185517/D9pJb9iSF">微博</a>汇报<br/>
-				更新预告: newUIv3(delay), 筛选功能(doing), 衣柜分享(delay), F品信息整合(reject), 快速添加衣柜(merger:筛选)<br/>
+					功能更新：<br/>
+					<a href="#" id="show_history">历史记录</a><br/>
+					1.30: 更新筛选功能和快速添加衣柜功能, 微博有春节期间活动时间表  ps:现在更新配装器有种给暖暖写(shuo)遗(qi)书(keng)的感觉<br/>
+					预告: newUIv3(delay), 衣柜分享(doing), qjnn.gift域名(plan), 微信版(plan)
+					<hr/>
+					衣柜、设计图更新：<br/>
+					<div id="update-info-2"></div>
+					<hr/>
+					关卡更新：<br/>
+					<div id="update-info-3"></div>
+					<br/>
 			</div><!-- announcement -->	
 			<div class="fliter">
 				距离搭配赛结束还有<span id="showTime">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>&nbsp;&nbsp;|&nbsp;&nbsp;
-				<a href="strategy.html">常用攻略</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 				<a href="biguse.html">梦幻大使对比工具</a>
 				<button style="display:none" class="btn btn-sm btn-default" id="sharewardrobe">分享衣柜</button>&nbsp;&nbsp;|&nbsp;&nbsp;
 				<button style="display:none" class="btn btn-sm btn-default" id="aaa" onclick="getWardrobe()">同步分享的衣柜</button>
@@ -158,96 +160,105 @@
 				</div>
 				<div class="fliter_form_div">
 					<form name="filter_form" class="form-inline">
-						<div class='facet'>
-							<div class="weightContainer" role="group" data-toggle="buttons">
-								<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="simple" value="1"/> 简约</label>
-								<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="simple" value="-1"/> 华丽</label>
-								<input class="btn-sm" placeholder="权重" type="text" id="simpleWeight" name="simpleWeight" value="1" onChange="changeFilter()" />
-								<span class="highscore-link btn-sm 1d778" id="simple1d778">微笑+飞吻</span>
-								<span class="highscore-link btn-sm 1d27" id="simple1d27">微笑</span>
-								<span class="highscore-rank btn-sm" id="simplerank"></span>
-							</div>
-							<div class="weightContainer" role="group" data-toggle="buttons">
-								<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="cute" value="1"/> 可爱</label>
-								<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="cute" value="-1"/> 成熟</label>
-								<input class="btn-sm" placeholder="权重" type="text" id="cuteWeight" name="cuteWeight" value="1" onChange="changeFilter()" />
-								<span class="highscore-link btn-sm 1d778" id="cute1d778">微笑+飞吻</span>
-								<span class="highscore-link btn-sm 1d27" id="cute1d27">微笑</span>
-								<span class="highscore-rank btn-sm" id="cuterank"></span>
-							</div>
-							<div class="weightContainer" role="group" data-toggle="buttons">
-								<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="active" value="1"/> 活泼</label>
-								<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="active" value="-1"/> 优雅</label>
-								<input class="btn-sm" placeholder="权重" type="text" id="activeWeight" name="activeWeight" value="1" onChange="changeFilter()" />
-								<span class="highscore-link btn-sm 1d778" id="active1d778">微笑+飞吻</span>
-								<span class="highscore-link btn-sm 1d27" id="active1d27">微笑</span>
-								<span class="highscore-rank btn-sm" id="activerank"></span>
-							</div>
-							<div class="weightContainer" role="group" data-toggle="buttons">
-								<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="pure" value="1"/> 清纯</label>
-								<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="pure" value="-1"/> 性感</label>
-								<input class="btn-sm" placeholder="权重" type="text" id="pureWeight" name="pureWeight" value="1" onChange="changeFilter()" />
-								<span class="highscore-link btn-sm 1d778" id="pure1d778">微笑+飞吻</span>
-								<span class="highscore-link btn-sm 1d27" id="pure1d27">微笑</span>
-								<span class="highscore-rank btn-sm" id="purerank"></span>
-							</div>
-							<div class="weightContainer" role="group" data-toggle="buttons">
-								<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="cool" value="1"/> 清凉</label>
-								<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="cool" value="-1"/> 保暖</label>
-								<input class="btn-sm" placeholder="权重" type="text" id="coolWeight" name="coolWeight" value="1" onChange="changeFilter()" />
-								<span class="highscore-link btn-sm 1d778" id="cool1d778">微笑+飞吻</span>
-								<span class="highscore-link btn-sm 1d27" id="cool1d27">微笑</span>
-								<span class="highscore-rank btn-sm" id="coolrank"></span>
-							</div>
-							<div class='weightContainer' id = "tag1Container" role="group" data-toggle="buttons">
-								<input class="btn-sm" placeholder="tag1" type="text" id="tag1" name="tag1" onChange="changeFilter()" />
-								<label class="btn btn-sm btn-default active"><input class="filter-radio" type="radio" name="tag1method" value="add" checked/> 加分</label>
-								<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="tag1method" value="replace"/> 替换</label>
-								<select class="btn-sm" id="tag1base" onChange="changeFilter()">
-									<option>SS</option>
-									<option>S</option>
-									<option>A</option>
-									<option>B</option>
-									<option>C</option>
-								</select>
-								<input class="btn-sm" type="text" id="tag1weight" name="tag1weight" value="1" onChange="changeFilter()" />
-							</div>
-							<div class='weightContainer' id = "tag2Container" role="group" data-toggle="buttons">
-								<input class="btn-sm" placeholder="tag2" type="text" id="tag2" name="tag2" onChange="changeFilter()" />
-								<label class="btn btn-sm btn-default active"><input class="filter-radio" type="radio" name="tag2method" value="add" checked/> 加分</label>
-								<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="tag2method" value="replace"/> 替换</label>
-								<select class="btn-sm" id="tag2base" onChange="changeFilter()">
-									<option>SS</option>
-									<option>S</option>
-									<option>A</option>
-									<option>B</option>
-									<option>C</option>
-								</select>
-								<input class="btn-sm" type="text" id="tag2weight" name="tag2weight" value="1" onChange="changeFilter()" />
-							</div>
-						</div><!-- facet -->
-						<div class="fliter_option clear">
-							<div class="checkbox"><label><input type="checkbox" class="fliter" value="own" checked /> 拥有<span id='inventoryCount'/></label></div>
-							<div class="checkbox"><label><input type="checkbox" class="fliter" value="missing" checked /> 没有</label></div>
-							<a href="#" class = "showmore" style="display:inline-block;cursor:pointer">↓显示全部衣服↓</a>
-							<span><a href="#" id="advanced_options">高级选项</a></span>
-							<span id="advanced_options_span">
-								<div class="checkbox"><label><input type="checkbox" class="fliter" value="sortbyscore" /> 饰品分数/id排序</label></div>
-								<div class="checkbox"><label><input type="checkbox" class="fliter" value="balance" /> 均衡权重</label></div>
-								<div class="checkbox"><label><input type="checkbox" class="fliter" value="highscore" /> 高分权重(手动)</label></div>
-							</span>
-							<span><a href="#" id="front_filter">页面内筛选</a></span>
-							<span id="front_filter_span">
-								<button  type="button" class="btn btn-default front_filter_option" value="1" >尚缺材料</button>
-								<button  type="button" class="btn btn-default front_filter_option" value="2" >少女级</button>
-								<button  type="button" class="btn btn-default front_filter_option" value="3" >公主级</button>
-								<button  type="button" class="btn btn-default front_filter_option" value="4" >店</button>
-								<button  type="button" class="btn btn-default front_filter_option" value="5" >活动</button>
-								<button  type="button" class="btn btn-default front_filter_option" value="7" >赠送</button>
-								<button  type="button" class="btn btn-default front_filter_option" value="8" >签到</button>
-								<button  type="button" class="btn btn-default front_filter_option" value="6" >非洲人不要点</button>
-							</span>
-						</div><!-- fliter_option -->
+						<div class="fliter_form_div_left">
+							<div class='facet'>
+								<div class="weightContainer" role="group" data-toggle="buttons">
+									<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="simple" value="1"/> 简约</label>
+									<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="simple" value="-1"/> 华丽</label>
+									<input class="btn-sm" placeholder="权重" type="text" id="simpleWeight" name="simpleWeight" value="1" onChange="changeFilter()" />
+									<span class="highscore-link btn-sm 1d778" id="simple1d778">微笑+飞吻</span>
+									<span class="highscore-link btn-sm 1d27" id="simple1d27">微笑</span>
+									<span class="highscore-rank btn-sm" id="simplerank"></span>
+								</div>
+								<div class="weightContainer" role="group" data-toggle="buttons">
+									<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="cute" value="1"/> 可爱</label>
+									<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="cute" value="-1"/> 成熟</label>
+									<input class="btn-sm" placeholder="权重" type="text" id="cuteWeight" name="cuteWeight" value="1" onChange="changeFilter()" />
+									<span class="highscore-link btn-sm 1d778" id="cute1d778">微笑+飞吻</span>
+									<span class="highscore-link btn-sm 1d27" id="cute1d27">微笑</span>
+									<span class="highscore-rank btn-sm" id="cuterank"></span>
+								</div>
+								<div class="weightContainer" role="group" data-toggle="buttons">
+									<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="active" value="1"/> 活泼</label>
+									<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="active" value="-1"/> 优雅</label>
+									<input class="btn-sm" placeholder="权重" type="text" id="activeWeight" name="activeWeight" value="1" onChange="changeFilter()" />
+									<span class="highscore-link btn-sm 1d778" id="active1d778">微笑+飞吻</span>
+									<span class="highscore-link btn-sm 1d27" id="active1d27">微笑</span>
+									<span class="highscore-rank btn-sm" id="activerank"></span>
+								</div>
+								<div class="weightContainer" role="group" data-toggle="buttons">
+									<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="pure" value="1"/> 清纯</label>
+									<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="pure" value="-1"/> 性感</label>
+									<input class="btn-sm" placeholder="权重" type="text" id="pureWeight" name="pureWeight" value="1" onChange="changeFilter()" />
+									<span class="highscore-link btn-sm 1d778" id="pure1d778">微笑+飞吻</span>
+									<span class="highscore-link btn-sm 1d27" id="pure1d27">微笑</span>
+									<span class="highscore-rank btn-sm" id="purerank"></span>
+								</div>
+								<div class="weightContainer" role="group" data-toggle="buttons">
+									<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="cool" value="1"/> 清凉</label>
+									<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="cool" value="-1"/> 保暖</label>
+									<input class="btn-sm" placeholder="权重" type="text" id="coolWeight" name="coolWeight" value="1" onChange="changeFilter()" />
+									<span class="highscore-link btn-sm 1d778" id="cool1d778">微笑+飞吻</span>
+									<span class="highscore-link btn-sm 1d27" id="cool1d27">微笑</span>
+									<span class="highscore-rank btn-sm" id="coolrank"></span>
+								</div>
+								<div class='weightContainer' id = "tag1Container" role="group" data-toggle="buttons">
+									<input class="btn-sm" placeholder="tag1" type="text" id="tag1" name="tag1" onChange="changeFilter()" />
+									<label class="btn btn-sm btn-default active"><input class="filter-radio" type="radio" name="tag1method" value="add" checked/> 加分</label>
+									<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="tag1method" value="replace"/> 替换</label>
+									<select class="btn-sm" id="tag1base" onChange="changeFilter()">
+										<option>SS</option>
+										<option>S</option>
+										<option>A</option>
+										<option>B</option>
+										<option>C</option>
+									</select>
+									<input class="btn-sm" type="text" id="tag1weight" name="tag1weight" value="1" onChange="changeFilter()" />
+								</div>
+								<div class='weightContainer' id = "tag2Container" role="group" data-toggle="buttons">
+									<input class="btn-sm" placeholder="tag2" type="text" id="tag2" name="tag2" onChange="changeFilter()" />
+									<label class="btn btn-sm btn-default active"><input class="filter-radio" type="radio" name="tag2method" value="add" checked/> 加分</label>
+									<label class="btn btn-sm btn-default"><input class="filter-radio" type="radio" name="tag2method" value="replace"/> 替换</label>
+									<select class="btn-sm" id="tag2base" onChange="changeFilter()">
+										<option>SS</option>
+										<option>S</option>
+										<option>A</option>
+										<option>B</option>
+										<option>C</option>
+									</select>
+									<input class="btn-sm" type="text" id="tag2weight" name="tag2weight" value="1" onChange="changeFilter()" />
+								</div>
+							</div><!-- facet -->
+							<div class="fliter_option clear">
+								<div class="checkbox"><label><input type="checkbox" class="fliter" value="own" checked /> 拥有<span id='inventoryCount'/></label></div>
+								<div class="checkbox"><label><input type="checkbox" class="fliter" value="missing" checked /> 没有</label></div>
+								<a href="#" class = "showmore" style="display:inline-block;cursor:pointer">↓显示全部衣服↓</a>
+							</div><!-- fliter_option -->
+						</div>
+						<div class="fliter_form_div_right">
+							<fieldset>
+								<legend>高级选项</legend>
+									<div class="checkbox"><label><input type="checkbox" class="fliter" value="sortbyscore" /> 按分数和id排序饰品</label></div>
+									<div class="checkbox"><label><input type="checkbox" class="fliter" value="balance" /> 均衡权重</label></div>
+									<div class="checkbox"><label><input type="checkbox" class="fliter" value="highscore" /> 高分权重</label></div>
+							</fieldset>
+							<fieldset>
+								<legend>筛选(先点击显示全部衣服)</legend>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >尚缺材料</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >少女级</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >少女染/进</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >公主级</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >公主染/进</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >店</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >店染/进</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >设计图</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >设计图染/进</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >活动</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >赠送/签到</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >迷/幻限定</button>
+									<button  type="button" class="btn btn-xs btn-success" id="add_all">添加所有显示的衣服到衣柜</button>
+							</fieldset>
+						</div>
 					</form>
 				</div><!-- fliter_form_div -->
 			</div><!-- fliter -->
