--- a/index.html
+++ b/index.html
@@ -146,8 +146,11 @@
 					<br/>
 			</div><!-- announcement -->	
 			<div class="fliter">
-				距离搭配赛结束还有<span id="showTime">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>&nbsp;&nbsp;|&nbsp;&nbsp;
+				距离搭配赛结束还有<span id="showTime">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+				&nbsp;&nbsp;|&nbsp;&nbsp;
 				<a href="biguse.html">梦幻大使对比工具</a>
+				&nbsp;&nbsp;|&nbsp;&nbsp;
+				<a href="introduce.html">配装器使用介绍(临时版, 图多慎点)</a>				
 				<button style="display:none" class="btn btn-sm btn-default" id="sharewardrobe">分享衣柜</button>&nbsp;&nbsp;|&nbsp;&nbsp;
 				<button style="display:none" class="btn btn-sm btn-default" id="aaa" onclick="getWardrobe()">同步分享的衣柜</button>
 				<br/>
