--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 					功能更新：<br/>
 					<a href="#" id="show_history">历史记录</a><br/>
 					1.30: 更新筛选功能和快速添加衣柜功能, 微博有春节期间活动时间表  ps:现在更新配装器有种给暖暖写(shuo)遗(qi)书(keng)的感觉<br/>
+					1.31: 梦幻大使工具更新了一个新功能, 欢迎测试和反馈问题, 不是特别准确, 不过可以做一定参考<br/>
 					预告: newUIv3(delay), 衣柜分享(doing), qjnn.gift域名(plan), 微信版(plan)
 					<hr/>
 					衣柜、设计图更新：<br/>
