--- a/biguse.html
+++ b/biguse.html
@@ -16,11 +16,11 @@
 		<link rel="stylesheet" href="biguse.css">
 		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/notice.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='jquery.js'></script>
-		<script type='text/javascript' charset="UTF-8" src='jquery.freezeheader.js'></script>
 		<script type='text/javascript' charset="UTF-8" src="bootstrap/bootstrap.min.js"></script>
 		<script type='text/javascript' charset="UTF-8" src="jquery.autocomplete.min.js"></script>		
 		<script type='text/javascript' charset="UTF-8" src="tool.js"></script>
 		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/wardrobe.js'></script>
+		<script type='text/javascript' charset="UTF-8" src='biguse_wardrobe.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='scoring.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='../nikkiup2u3_data/levels.js'></script>
 		<script type='text/javascript' charset="UTF-8" src='model.js'></script>
@@ -46,8 +46,11 @@
 				<div id="update_history">
 					<br/>
 				</div>
-					12.30: 为梦幻大使活动做得小工具, 比较简单, 有建议可以在下边留言(图片太大了暂时传不上来...<br/>
-					12.30: 把图片喂给哈士奇咬了10分钟, 传上来了一份很模糊的临时版本, 1号左右有时间的时候重新压一遍<br/>
+					<!--12.30: 为梦幻大使活动做得小工具, 比较简单, 有建议可以在下边留言(图片太大了暂时传不上来...<br/>
+					12.30: 把图片喂给哈士奇咬了10分钟, 传上来了一份很模糊的临时版本, 1号左右有时间的时候重新压一遍<br/>-->
+					1.30: 梦幻大使活动, 按配件大小/颜色搜索功能制作中, 预计3号左右能够完成<br/>
+					目前进度 图片收集&处理:98%+, 图片分析:仅发型, 筛选功能: 尚未开始<br/>
+					
 				<a href="#" id="show_history">历史更新</a><br/>
 				<br/>
 				基础数据来自奇迹暖暖在线配装器 by黑的升华<br/>
@@ -57,8 +60,8 @@
 			<div>
 				<select id="theme" onChange="changeTheme()"></select>
 			<div style="display:none" id="imgModel" onerror="noimg()">
-			</div>
 			<div id="imgInfo" style="font-size: 18px"></div>
+			</div>
 				
 			</div>
 			<div class="fliter hidden">
