--- a/index.html
+++ b/index.html
@@ -131,12 +131,13 @@
 					1.19: 半夜忙完发现饰品分数规则改了, ip君那边估计commit代码后又忘了push, 所以算出的tag分数都是NaN, 根据原理自己理解写了一个规则, 有问题的话周末再改吧, 基本全关带20个饰品没问题, 也没见过哪几关权重相差10倍的<br/>
 					1.19: 修复移动版属性错误<br/>
 					1.24: 把冰雪女王活动去掉以证明一下自己还活着<br/>
+					1.30: 更新筛选功能和快速添加衣柜功能, 微博有春节期间活动时间表  ps:现在更新配装器有种给暖暖写(shuo)遗(qi)书(keng)的感觉<br/>
+					1.31: 梦幻大使工具更新了一个新功能, 欢迎测试和反馈问题, 不是特别准确, 不过可以做一定参考<br/>
 					<br/>
 				</div>
 					功能更新：<br/>
 					<a href="#" id="show_history">历史记录</a><br/>
-					1.30: 更新筛选功能和快速添加衣柜功能, 微博有春节期间活动时间表  ps:现在更新配装器有种给暖暖写(shuo)遗(qi)书(keng)的感觉<br/>
-					1.31: 梦幻大使工具更新了一个新功能, 欢迎测试和反馈问题, 不是特别准确, 不过可以做一定参考<br/>
+					2.2: 梦幻大使功能更新, 优化了颜色聚类算法, 欢迎测试~~<br/>
 					预告: newUIv3(delay), 衣柜分享(doing), qjnn.gift域名(plan), 微信版(plan)
 					<hr/>
 					衣柜、设计图更新：<br/>
