--- a/biguse.html
+++ b/biguse.html
@@ -44,10 +44,10 @@
 		<div class='top'>
 			<div class="announcement">
 				<div id="update_history">
+					12.30: 为梦幻大使活动做得小工具, 比较简单, 有建议可以在下边留言(图片太大了暂时传不上来...<br/>
+					12.30: 把图片喂给哈士奇咬了10分钟, 传上来了一份很模糊的临时版本, 1号左右有时间的时候重新压一遍<br/>
 					<br/>
 				</div>
-					<!--12.30: 为梦幻大使活动做得小工具, 比较简单, 有建议可以在下边留言(图片太大了暂时传不上来...<br/>
-					12.30: 把图片喂给哈士奇咬了10分钟, 传上来了一份很模糊的临时版本, 1号左右有时间的时候重新压一遍<br/>-->
 					1.30: 梦幻大使活动, 按配件大小/颜色搜索功能制作中, 预计3号左右能够完成<br/>
 					2.2: 优化颜色聚类算法, 添加筛选功能<br/>
 					
