--- a/biguse.html
+++ b/biguse.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>奇迹暖暖在线配装器</title>
+		<title>梦幻大使在线工具</title>
 		<link rel="stylesheet" href="bootstrap/bootstrap.min.css">
 		<link rel="stylesheet" href="jquery.autocomplete.css">
 		<link rel="stylesheet" href="onekeystrategy.css">
@@ -37,7 +37,7 @@
   </head>
   <body>
 		<div class='title'>
-			奇迹暖暖在线配装器for梦幻大使 by:黑的升华<br/>
+			梦幻大使在线工具 by:黑的升华<br/>
 			<div id="share-link"></div>
 		</div>
 		<div id="StrategyInfo"></div>
@@ -50,12 +50,12 @@
 				</div>
 					1.30: 梦幻大使活动, 按配件大小/颜色搜索功能制作中, 预计3号左右能够完成<br/>
 					2.2: 优化颜色聚类算法, 添加筛选功能<br/>
+					2.3: 添加其他部件, 优化过滤算法<br/>
 					
 				<a href="#" id="show_history">历史更新</a><br/>
 				<br/>
 				基础数据来自奇迹暖暖在线配装器 by黑的升华<br/>
 				图片数据来自amy_翡翠&米桃@QQ群 V1.6.3<br/>
-				更新预告: 大使还会再来么?<br/>
 			</div><!-- announcement -->	
 			<div>
 				<select id="theme" onChange="changeTheme()"></select>
