--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
 		<div class='title'>
-			奇迹暖暖在线配装器 by <a href="http://weibo.com/u/3597140883">@黑的升华</a>   modified from
+			奇迹暖暖在线工具 by <a href="http://weibo.com/u/3597140883">@黑的升华</a>   modified from
 			<a href="http://ivangift.github.io/nikkiup2u3/"><font style="color:red">意念挖坟的ip君@ivangift's github 20151201</font></a><br/>
 			服装、设计图数据 provided by amy_翡翠<br/>
 			全关卡数据、提示 provided by morei猫猫&兔子  <a href="http://tieba.baidu.com/p/4223816101">贴吧反馈</a> | <a href="http://weibo.com/5674185517/D9pJb9iSF">微博反馈</a><br/>
@@ -133,19 +133,19 @@
 					1.24: 把冰雪女王活动去掉以证明一下自己还活着<br/>
 					1.30: 更新筛选功能和快速添加衣柜功能, 微博有春节期间活动时间表  ps:现在更新配装器有种给暖暖写(shuo)遗(qi)书(keng)的感觉<br/>
 					1.31: 梦幻大使工具更新了一个新功能, 欢迎测试和反馈问题, 不是特别准确, 不过可以做一定参考<br/>
+					2.2: 梦幻大使功能更新, 优化了颜色聚类算法, 欢迎测试~~<br/>
 					<br/>
 				</div>
-					功能更新：<br/>
-					<a href="#" id="show_history">历史记录</a><br/>
-					2.2: 梦幻大使功能更新, 优化了颜色聚类算法, 欢迎测试~~<br/>
-					预告: newUIv3(delay), 衣柜分享(doing), qjnn.gift域名(plan), 微信版(plan)
+					功能更新：by 黑的升华&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#" id="show_history">历史记录</a><br/>
+					2.3: 梦幻大使功能更新完毕<br/>
 					<hr/>
-					衣柜、设计图更新：<br/>
+					衣柜、设计图更新：by 翡翠<br/>
 					<div id="update-info-2"></div>
 					<hr/>
-					关卡更新：<br/>
+					关卡更新：by 兔子<br/>
 					<div id="update-info-3"></div>
 					<br/>
+					预告: newUIv3(delay), 衣柜分享(doing), qjnn.gift域名(plan), 微信版(plan)
 			</div><!-- announcement -->	
 			<div class="fliter">
 				距离搭配赛结束还有<span id="showTime">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
