--- a/index.html
+++ b/index.html
@@ -134,17 +134,21 @@
 					1.30: 更新筛选功能和快速添加衣柜功能, 微博有春节期间活动时间表  ps:现在更新配装器有种给暖暖写(shuo)遗(qi)书(keng)的感觉<br/>
 					1.31: 梦幻大使工具更新了一个新功能, 欢迎测试和反馈问题, 不是特别准确, 不过可以做一定参考<br/>
 					2.2: 梦幻大使功能更新, 优化了颜色聚类算法, 欢迎测试~~<br/>
+					2.3: 梦幻大使功能更新完毕<br/>
 					<br/>
 				</div>
-					功能更新：by 黑的升华&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#" id="show_history">历史记录</a><br/>
-					2.3: 梦幻大使功能更新完毕<br/>
+					功能更新：by 黑的升华<br/>
+					2.19: 修复原筛选; 新增筛选: 清空, 套装部件, 新品; 增加分类"全部"; qjnn.gift域名试用中<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
+					<div id="history-update-info-2"></div>
 					<div id="update-info-2"></div>
 					<hr/>
 					关卡更新：by 兔子<br/>
+					<div id="history-update-info-3"></div>
 					<div id="update-info-3"></div>
 					<br/>
+					<a href="#" id="show_history">查看历史更新</a><br/><br/>
 					预告: newUIv3(delay), 衣柜分享(doing), qjnn.gift域名(plan), 微信版(plan)
 			</div><!-- announcement -->	
 			<div class="fliter">
@@ -249,6 +253,7 @@
 							</fieldset>
 							<fieldset>
 								<legend>筛选(先点击显示全部衣服)</legend>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >清空筛选</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >尚缺材料</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >少女级</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >少女染/进</button>
@@ -260,7 +265,9 @@
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >设计图染/进</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >活动</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >赠送/签到</button>
-									<button  type="button" class="btn btn-xs btn-default front_filter_option" >迷/幻限定</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >迷幻限定</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >套装部件</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >新品</button>
 									<button  type="button" class="btn btn-xs btn-success" id="add_all">添加所有显示的衣服到衣柜</button>
 							</fieldset>
 						</div>
