--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 							</fieldset>
 							<fieldset>
 								<legend>筛选(先点击显示全部衣服)</legend>
-									<button  type="button" class="btn btn-xs btn-default front_filter_option" >清空筛选</button>
+									<button  type="button" class="btn btn-xs btn-info front_filter_option" >全部</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >尚缺材料</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >少女级</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >少女染/进</button>
@@ -266,6 +266,9 @@
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >活动</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >赠送/签到</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >迷幻限定</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >3星</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >4星</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >5星</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >套装部件</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >新品</button>
 									<button  type="button" class="btn btn-xs btn-success" id="add_all">添加所有显示的衣服到衣柜</button>
