--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 				</div>
 					功能更新：by 黑的升华<br/>
 					2.19: 修复原筛选; 新增筛选: 清空, 套装部件, 新品; 增加分类"全部"; qjnn.gift域名试用中<br/>
+					2.23: 新增方便拆解查询的筛选: 迷之屋限定(不包含仙履), 3星,4星,5星; 注: 不确定以后更新的设计图会不会用到现有的迷阁限定/双阁限定, 请自行判断是否要拆<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
@@ -265,7 +266,8 @@
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >设计图染/进</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >活动</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >赠送/签到</button>
-									<button  type="button" class="btn btn-xs btn-default front_filter_option" >迷幻限定</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >迷之屋限定</button>
+									<button  type="button" class="btn btn-xs btn-default front_filter_option" >迷之屋限定染/进</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >3星</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >4星</button>
 									<button  type="button" class="btn btn-xs btn-default front_filter_option" >5星</button>
