--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>o(>.<)o奇迹暖暖在线工具</title>
+		<title>\(=w=)/奇迹暖暖在线工具</title>
 		<link rel="stylesheet" href="bootstrap/bootstrap.min.css">
 		<link rel="stylesheet" href="onekeystrategy.css">
 		<link rel="stylesheet" href="style.css">
@@ -135,11 +135,12 @@
 					1.31: 梦幻大使工具更新了一个新功能, 欢迎测试和反馈问题, 不是特别准确, 不过可以做一定参考<br/>
 					2.2: 梦幻大使功能更新, 优化了颜色聚类算法, 欢迎测试~~<br/>
 					2.3: 梦幻大使功能更新完毕<br/>
+					2.19: 修复原筛选; 新增筛选: 清空, 套装部件, 新品; 增加分类"全部"; qjnn.gift域名试用中<br/>
+					2.23: 新增方便拆解查询的筛选: 迷之屋限定(不包含仙履), 3星,4星,5星; 注: 不确定以后更新的设计图会不会用到现有的迷阁限定/双阁限定, 请自行判断是否要拆; 修复一键添加BUG<br/>
 					<br/>
 				</div>
 					功能更新：by 黑的升华<br/>
-					2.19: 修复原筛选; 新增筛选: 清空, 套装部件, 新品; 增加分类"全部"; qjnn.gift域名试用中<br/>
-					2.23: 新增方便拆解查询的筛选: 迷之屋限定(不包含仙履), 3星,4星,5星; 注: 不确定以后更新的设计图会不会用到现有的迷阁限定/双阁限定, 请自行判断是否要拆; 修复一键添加BUG<br/>
+					2.29: 更新染/进筛选时, 会同时筛选出珍稀和珍稀染色<br/>
 					<hr/>
 					衣柜、设计图更新：by 翡翠<br/>
 					<div id="history-update-info-2"></div>
@@ -150,7 +151,7 @@
 					<div id="update-info-3"></div>
 					<br/>
 					<a href="#" id="show_history">查看历史更新</a><br/><br/>
-					预告: newUIv3(delay), 衣柜分享(doing), qjnn.gift域名(plan), 微信版(plan)
+					预告: newUIv3(delay), 衣柜分享(doing), qjnn.gift域名试用中, 微信版(plan)
 			</div><!-- announcement -->	
 			<div class="fliter">
 				距离搭配赛结束还有<span id="showTime">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
